force-app/main/default/objects/REO__c/REO__c.object-meta.xml
<CustomObject>
    <label>REO</label>
    <nameField>
        <label>REO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>REOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>