force-app/main/default/objects/REO__c/fields/Broker_Company__c.field-meta.xml
<CustomField>
    <fullName>Broker_Company__c</fullName>
    <label>Broker Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>