force-app/main/default/objects/REO__c/fields/Converted_to_REO_Date__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_REO_Date__c</fullName>
    <formula>Special_Asset__r.REO_Date__c</formula>
    <label>Converted to REO Date</label>
    <type>Date</type>
</CustomField>