force-app/main/default/objects/REO__c/fields/Days_in_Eviction__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Eviction__c</fullName>
    <formula>Eviction_Complete_Date__c - Eviction_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Eviction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>