force-app/main/default/objects/REO__c/fields/Days_to_REO_Sold__c.field-meta.xml
<CustomField>
    <fullName>Days_to_REO_Sold__c</fullName>
    <formula>REO_Sold_Date__c  - Property__r.Foreclosure__r.REO_Date__c</formula>
    <label>Days to REO Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>