force-app/main/default/objects/REO__c/fields/Eviction_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Eviction_Complete_Date__c</fullName>
    <label>Eviction Complete Date</label>
    <type>Date</type>
</CustomField>