force-app/main/default/objects/REO__c/fields/Eviction_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Eviction_Start_Date__c</fullName>
    <label>Eviction Start Date</label>
    <type>Date</type>
</CustomField>