force-app/main/default/objects/REO__c/fields/Foreclosure_Sale_Amount__c.field-meta.xml
<CustomField>
    <fullName>Foreclosure_Sale_Amount__c</fullName>
    <label>Foreclosure Sale Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>