force-app/main/default/objects/REO__c/fields/Gross_Sales_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Gross_Sales_Proceeds__c</fullName>
    <label>Gross Sales Proceeds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>