force-app/main/default/objects/REO__c/fields/Legal_fee__c.field-meta.xml
<CustomField>
    <fullName>Legal_fee__c</fullName>
    <label>Legal fee %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>