force-app/main/default/objects/REO__c/fields/Redemption_Expiration_TDUS_Recording__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Expiration_TDUS_Recording__c</fullName>
    <label>Redemption Expiration / TDUS Recording</label>
    <type>Date</type>
</CustomField>