force-app/main/default/objects/REO__c/fields/REO_Insurance_Canceled__c.field-meta.xml
<CustomField>
    <fullName>REO_Insurance_Canceled__c</fullName>
    <label>REO Insurance Canceled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>