force-app/main/default/objects/REO__c/fields/REO_Insurance_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>REO_Insurance_Ordered_Date__c</fullName>
    <label>REO Insurance Ordered Date</label>
    <type>Date</type>
</CustomField>