force-app/main/default/objects/REO__c/fields/REO_Insurance_Vendor__c.field-meta.xml
<CustomField>
    <fullName>REO_Insurance_Vendor__c</fullName>
    <label>REO Insurance Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>