force-app/main/default/objects/REO__c/fields/REO_Loss_Severity__c.field-meta.xml
<CustomField>
    <fullName>REO_Loss_Severity__c</fullName>
    <label>REO Loss Severity %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>