force-app/main/default/objects/REO__c/fields/REO_Policy_Amount__c.field-meta.xml
<CustomField>
    <fullName>REO_Policy_Amount__c</fullName>
    <label>REO Policy Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>