force-app/main/default/objects/REO__c/fields/REO_Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>REO_Sold_Date__c</fullName>
    <label>REO Sold Date</label>
    <type>Date</type>
</CustomField>