force-app/main/default/objects/REO__c/fields/Special_Asset__c.field-meta.xml
<CustomField>
    <fullName>Special_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Special Asset</label>
    <referenceTo>Special_Asset__c</referenceTo>
    <relationshipLabel>REOs</relationshipLabel>
    <relationshipName>REOs</relationshipName>
    <type>Lookup</type>
</CustomField>